added the raise  on error

--- a/try_sample/try_sample.ipynb
+++ b/try_sample/try_sample.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies\n",
     "import requests\n",
     "import time\n",
-    "from   dotenv import load_dotenv\n",
+    "from dotenv import load_dotenv\n",
     "import os\n",
     "import pandas as pd\n",
     "import json\n",
@@ -25,34 +25,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NYT and TMDB keys retieved from .env\n"
+      "NYT and TMDB keys retrieved from .env\n"
      ]
     }
    ],
    "source": [
     "# Set environment variables from the .env in the local environment\n",
-    "\n",
     "try:\n",
     "    load_dotenv()   \n",
     "    nyt_api_key = os.getenv(\"NYT_API_KEY\")\n",
     "    tmdb_api_key = os.getenv(\"TMDB_API_KEY\")\n",
-    "    if nyt_api_key == None:\n",
-    "        print ('nyt_api_key not found in .env file')\n",
-    "    elif tmdb_api_key == None:\n",
-    "        print ('tmdb_api_key not found in .env file')\n",
+    "    \n",
+    "    if nyt_api_key is None:\n",
+    "        raise ValueError('NYT_API_KEY not found in .env file')\n",
+    "    elif tmdb_api_key is None:\n",
+    "        raise ValueError('TMDB_API_KEY not found in .env file')\n",
     "    else:\n",
-    "        print('NYT and TMDB keys retieved from .env')\n",
+    "        print('NYT and TMDB keys retrieved from .env')\n",
     "    \n",
     "except Exception as e:\n",
-    "        # Handle potential errors in the request or data processing\n",
-    "        print(f'An error occurred: {e}')"
+    "    # Handle potential errors in loading .env or missing API keys\n",
+    "    print(f'An error occurred: {e}')\n"
    ]
   }
  ],
