updates for .env

--- a/try_sample/try_sample.ipynb
+++ b/try_sample/try_sample.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".;C:\\bin\n"
+     ]
+    }
+   ],
    "source": [
     "# Dependencies\n",
     "import requests\n",
@@ -20,19 +28,20 @@
     "import os\n",
     "import pandas as pd\n",
     "import json\n",
-    "import re"
+    "import re\n",
+    "print (os.defpath )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NYT and TMDB keys retrieved from .env\n"
+      "An error occurred: The key provided failed to authenticate nyt_api_key i love ny code 401\n"
      ]
     }
    ],
@@ -42,17 +51,17 @@
     "    load_dotenv()   \n",
     "    nyt_api_key = os.getenv(\"NYT_API_KEY\")\n",
     "    tmdb_api_key = os.getenv(\"TMDB_API_KEY\")\n",
-    "    \n",
-    "    if nyt_api_key is None:\n",
-    "        raise ValueError('NYT_API_KEY not found in .env file')\n",
-    "    elif tmdb_api_key is None:\n",
-    "        raise ValueError('TMDB_API_KEY not found in .env file')\n",
-    "    else:\n",
-    "        print('NYT and TMDB keys retrieved from .env')\n",
-    "    \n",
+    "    assert nyt_api_key is not None, 'NYT_API_KEY not found in .env file'\n",
+    "    assert tmdb_api_key is not None, 'TMDB_API_KEY not found in .env file'\n",
+    "    responce=requests.get(f'https://api.nytimes.com/svc/mostpopular/v2/viewed/1.json?api-key={nyt_api_key}')\n",
+    "    assert responce.status_code == 200, f'The key provided failed to authenticate nyt_api_key {nyt_api_key} code {responce.status_code}'\n",
+    "    responce=requests.get(f'https://api.themoviedb.org/3/movie/11?api_key={tmdb_api_key}')\n",
+    "    assert responce.status_code == 200, f'The key provided failed to authenticate tmdb_api_key {tmdb_api_key} code {responce.status_code}'\n",
     "except Exception as e:\n",
     "    # Handle potential errors in loading .env or missing API keys\n",
-    "    print(f'An error occurred: {e}')\n"
+    "    print(f'An error occurred: {e}')\n",
+    "else:\n",
+    "    print('All keys laoded correctly')"
    ]
   }
  ],
